<resources>
    <string name="app_name">Avaya Contest</string>
    <string name="tab_registro">Registro</string>
    <string name="tab_asistentes">Asistentes</string>

    <string name="spnr_seleccion_evento">EVENTOS</string>
    <string name="spnr_seleccion_sala">SALAS</string>
    <string name="btn_ir_a_sala">Ir a la Sala</string>

    <string name="msg_activitiseleccion_sala_invalid">La sala esta cerrada, elegir una diferente.</string>

    <string name="dialog_wait_title">Informacion</string>
    <string name="dialog_wait_msg">Obteniendo Informacion...</string>

    <string name="fragment_reg_info">Presiona para registrar asistente</string>

    <string name="menu_main_salir">Salir de Sala</string>
    <string name="fragment_reg_invlaidqr">QR invalido</string>
    <string name="fragment_reg_invaliduser">El registro no existe</string>
    <string name="fragment_reg_unkonwerror">Error Desconocido</string>
    <string name="dialog_itegrante_title">Informacion de Integrante</string>
    <string name="dialog_itegrante_name">Nombre:</string>
    <string name="dialog_itegrante_empresa">Empresa:</string>
    <string name="dialog_itegrante_tel">Movil:</string>
    <string name="dialog_itegrante_mail">Correo:</string>
    <string name="dialog_itegrante_hora">Hora de Ingreso:</string>
    <string name="dialog_itegrante_quitar">Quitar Asistencia</string>
    <string name="dialog_itegrante_continuar">Continuar</string>
    <string name="fragment_asis_btnbuscar">BUSCAR</string>
    <string name="fragment_asis_tvbuscar">Nombre o Apellido</string>
    <string name="web_error">Error de conexion con el end point.</string>
    <string name="fecha">"Fecha: "</string>
    <string name="hora">"Hora: "</string>
    <string name="dialog_itegrante_registrar">Registrar</string>
    <string name="dialog_itegrante_cancelar">Cancelar</string>
    <string name="web_response_ok">Correcto.</string>
    <string name="dialog_itegrante_alert">¡El integrantre ya se encuentra en la sala!</string>
    <string name="dialog_unregister_alert">¿Cual es el motivo por el que se quita la asistencia?</string>
    <string name="dialog_unregister_title">Quitar Asistencia</string>
    <string name="dialog_unregister_accept">ACEPTAR</string>
    <string name="dialog_unregister_cancel">CANCELAR</string>
    <string name="dialog_unregister_condition_one">Debes especificar un motivo</string>
    <string name="menu_about">Acerca de...</string>
    <string name="request_permissions_title">Solicitud de permisos</string>
    <string name="request_permissions_message">Para continuar hay que aceptar los isguientes permisos.</string>
    <string name="ok">OK</string>
    <string name="dlog_version_title">Informacion</string>
</resources>
