<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:textSize="20dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/color_text_unit_spnr"
            android:gravity="center"
            android:text="@string/dialog_itegrante_title" />
        <TextView
            android:id="@+id/tv_dialogIntegrante_alert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="20dp"
            android:layout_margin="10dp"
            android:text="@string/dialog_itegrante_alert" />

        <FrameLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/iv_dialogIntegrante_foto"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/qr_scan"/>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textStyle="bold"
                android:text="@string/dialog_itegrante_name" />
            <TextView
                android:id="@+id/tv_dialogIntegrante_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="#Nombre" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textStyle="bold"
                android:text="@string/dialog_itegrante_empresa" />
            <TextView
                android:id="@+id/tv_dialogIntegrante_empresa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="#Nombre" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textStyle="bold"
                android:text="@string/dialog_itegrante_tel" />
            <TextView
                android:id="@+id/tv_dialogIntegrante_movil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="#Nombre" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textStyle="bold"
                android:text="@string/dialog_itegrante_mail" />
            <TextView
                android:id="@+id/tv_dialogIntegrante_correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="#Nombre" />
        </LinearLayout>
        <!--<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textStyle="bold"
                android:text="@string/dialog_itegrante_hora" />
            <TextView
                android:id="@+id/tv_dialogIntegrante_hora"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="#Nombre" />
        </LinearLayout>-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_dialogIntegrante_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="5dp"
                android:textColor="@color/colorPrimary"
                android:textSize="15dp"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:text="@string/dialog_itegrante_quitar" />
            <Button
                android:id="@+id/btn_dialogIntegrante_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:textColor="@color/color_text_unit_spnr"
                android:textSize="15dp"
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:text="@string/dialog_itegrante_continuar" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>